app: fix alignments and spacings

--- a/src/banner.css
+++ b/src/banner.css
@@ -1,7 +1,7 @@
 .banner {
   display: flex;
   flex-direction: column-reverse;
-  margin: 20px 20px;
+  margin: 75px 20px;
   text-align: center;
 }
 
